--- a/index.html
+++ b/index.html
@@ -1,90 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ChatGPT UI Clone</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Plumsoft Chat Assistant</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #fff;
+      background: #f5f5f5;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
       height: 100vh;
     }
 
-    .prompt-text {
-      font-size: 28px;
-      margin-bottom: 40px;
-      color: #333;
+    .header {
+      background: #4b0082;
+      color: white;
+      padding: 16px;
+      text-align: center;
+      font-size: 22px;
+    }
+
+    .chat-box {
+      flex: 1;
+      padding: 16px;
+      overflow-y: auto;
+    }
+
+    .message {
+      margin: 12px 0;
+      padding: 12px 16px;
+      border-radius: 16px;
+      max-width: 75%;
+      line-height: 1.5;
+    }
+
+    .user {
+      background: #d1e7ff;
+      align-self: flex-end;
+    }
+
+    .bot {
+      background: #ffffff;
+      align-self: flex-start;
+      border: 1px solid #ddd;
     }
 
     .input-container {
       display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 30px;
-      padding: 12px 20px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      background: #fff;
+      padding: 10px;
+      border-top: 1px solid #ccc;
+      background: white;
     }
 
     .input-container input {
       flex: 1;
-      border: none;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 20px;
       outline: none;
       font-size: 16px;
-      background: transparent;
     }
 
-    .emoji {
-      font-size: 18px;
+    .input-container button {
+      margin-left: 8px;
+      padding: 12px 20px;
+      background: #4b0082;
+      color: white;
+      border: none;
+      border-radius: 20px;
       cursor: pointer;
-      margin: 0 8px;
+      font-size: 16px;
+    }
+
+    .chat-box {
+      display: flex;
+      flex-direction: column;
     }
   </style>
 </head>
 <body>
 
-  <div class="prompt-text">Welcome to Plumsoft</div>
+  <div class="header">💬 Welcome to Plumsoft Assistant</div>
 
-  <div class="input-container">
-    <input type="text" placeholder="Ask anything" />
-  </div>
+  <div class="chat-box" id="chatBox"></div>
+
+  <form class="input-container" onsubmit="sendMessage(event)">
+    <input type="text" id="userInput" placeholder="Ask anything about Plumsoft..." autocomplete="off" />
+    <button type="submit">Send</button>
+  </form>
 
   <script>
-  const input = document.querySelector("input");
+    const chatBox = document.getElementById("chatBox");
+    const input = document.getElementById("userInput");
 
-  input.addEventListener("keydown", function (event) {
-    if (event.key === "Enter") {
-      const question = input.value.trim();
-      if (!question) return;
+    function appendMessage(text, sender) {
+      const msg = document.createElement("div");
+      msg.classList.add("message", sender);
+      msg.innerHTML = text.replace(/\n/g, "<br>");
+      chatBox.appendChild(msg);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    function sendMessage(e) {
+      e.preventDefault();
+      const text = input.value.trim();
+      if (!text) return;
+
+      appendMessage(text, "user");
+      input.value = "";
 
       fetch("https://t5-model-442797114823.us-central1.run.app/ask", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ query: question })
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ query: text })
       })
-      .then(response => response.json())
+      .then(res => res.json())
       .then(data => {
-        alert("Answer: " + data.response);  // You can style this later
+        const reply = data.response || "❌ No response received.";
+        appendMessage(reply, "bot");
       })
-      .catch(error => {
-        console.error("Error:", error);
-        alert("Something went wrong!");
+      .catch(err => {
+        console.error("Error:", err);
+        appendMessage("❌ Failed to reach the assistant.", "bot");
       });
-
-      input.value = ""; // Clear input
     }
-  });
-</script>
+  </script>
 
 </body>
 </html>
