--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       appendMessage(text, "user");
       input.value = "";
 
-      fetch("https://t5-model-442797114823.us-central1.run.app/ask", {
+      fetch("link", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ query: text })
