--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       appendMessage(text, "user");
       input.value = "";
 
-      fetch("link", {
+      fetch("http://35.200.240.100:8080/ask", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ query: text })
