--- a/index.html
+++ b/index.html
@@ -1,132 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Plumsoft Chat Assistant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
+from fastapi import FastAPI
+from pydantic import BaseModel
+from fastapi.middleware.cors import CORSMiddleware
+from sentence_transformers import SentenceTransformer
+from sklearn.metrics.pairwise import cosine_similarity
+from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline
+import re
 
-    .header {
-      background: #4b0082;
-      color: white;
-      padding: 16px;
-      text-align: center;
-      font-size: 22px;
-    }
+app = FastAPI()
 
-    .chat-box {
-      flex: 1;
-      padding: 16px;
-      overflow-y: auto;
-    }
+app.add_middleware(
+    CORSMiddleware,
+    allow_origins=["*"], allow_credentials=True,
+    allow_methods=["*"], allow_headers=["*"],
+)
 
-    .message {
-      margin: 12px 0;
-      padding: 12px 16px;
-      border-radius: 16px;
-      max-width: 75%;
-      line-height: 1.5;
-    }
+# Load models
+embed_model = SentenceTransformer("all-MiniLM-L6-v2")
+tokenizer = AutoTokenizer.from_pretrained("mistralai/Mistral-7B-Instruct-v0.1")
+model = AutoModelForCausalLM.from_pretrained("mistralai/Mistral-7B-Instruct-v0.1")
+generator = pipeline("text-generation", model=model, tokenizer=tokenizer)
 
-    .user {
-      background: #d1e7ff;
-      align-self: flex-end;
-    }
+# Load your company data
+with open("company_data.txt", "r") as f:
+    docs = f.read().split("\n")
+doc_embeddings = embed_model.encode(docs)
 
-    .bot {
-      background: #ffffff;
-      align-self: flex-start;
-      border: 1px solid #ddd;
-    }
+class Prompt(BaseModel):
+    query: str
 
-    .input-container {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-      background: white;
-    }
+@app.post("/ask")
+def ask(prompt: Prompt):
+    query_embedding = embed_model.encode([prompt.query])
+    similarities = cosine_similarity(query_embedding, doc_embeddings)[0]
+    top_idx = similarities.argsort()[-2:][::-1]
+    context = "\n".join([docs[i] for i in top_idx])
 
-    .input-container input {
-      flex: 1;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 20px;
-      outline: none;
-      font-size: 16px;
-    }
+    final_prompt = (
+        f"Use the following context to answer the question:\n{context}\n\n"
+        f"Answer the user's question conversationally and informatively without repeating the question:\n"
+        f"{prompt.query}"
+    )
 
-    .input-container button {
-      margin-left: 8px;
-      padding: 12px 20px;
-      background: #4b0082;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-    }
+    output = generator(final_prompt, max_new_tokens=200)[0]["generated_text"]
 
-    .chat-box {
-      display: flex;
-      flex-direction: column;
-    }
-  </style>
-</head>
-<body>
+    # ✨ Clean the output - remove everything before the first capital-letter sentence
+    match = re.search(r"[A-Z][^.?!]*[.?!]", output)
+    cleaned_output = output[match.start():].strip() if match else output.strip()
 
-  <div class="header">💬 Welcome to Plumsoft Assistant</div>
-
-  <div class="chat-box" id="chatBox"></div>
-
-  <form class="input-container" onsubmit="sendMessage(event)">
-    <input type="text" id="userInput" placeholder="Ask anything about Plumsoft..." autocomplete="off" />
-    <button type="submit">Send</button>
-  </form>
-
-  <script>
-    const chatBox = document.getElementById("chatBox");
-    const input = document.getElementById("userInput");
-
-    function appendMessage(text, sender) {
-      const msg = document.createElement("div");
-      msg.classList.add("message", sender);
-      msg.innerHTML = text.replace(/\n/g, "<br>");
-      chatBox.appendChild(msg);
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function sendMessage(e) {
-      e.preventDefault();
-      const text = input.value.trim();
-      if (!text) return;
-
-      appendMessage(text, "user");
-      input.value = "";
-
-      fetch("https://50b5-35-200-240-100.ngrok-free.app/ask", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ query: text })
-})
-      .then(res => res.json())
-      .then(data => {
-        const reply = data.response || "❌ No response received.";
-        appendMessage(reply, "bot");
-      })
-      .catch(err => {
-        console.error("Error:", err);
-        appendMessage("❌ Failed to reach the assistant.", "bot");
-      });
-    }
-  </script>
-
-</body>
-</html>
+    return {"response": cleaned_output}
