--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
   <div class="header">💬 Welcome to Plumsoft Assistant</div>
 
   <div class="chat-box" id="chatBox"></div>
+  <!-- Add model selection -->
+<select id="modelSelector" style="margin: 10px; padding: 8px;">
+  <option value="mistral">Mistral</option>
+  <option value="t5">T5</option>
+</select>
 
   <form class="input-container" onsubmit="sendMessage(event)">
     <input type="text" id="userInput" placeholder="Ask anything about Plumsoft..." autocomplete="off" />
@@ -89,41 +94,48 @@
   </form>
 
   <script>
-    const chatBox = document.getElementById("chatBox");
-    const input = document.getElementById("userInput");
+  const chatBox = document.getElementById("chatBox");
+  const input = document.getElementById("userInput");
 
-    function appendMessage(text, sender) {
-      const msg = document.createElement("div");
-      msg.classList.add("message", sender);
-      msg.innerHTML = text.replace(/\n/g, "<br>");
-      chatBox.appendChild(msg);
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
+  function appendMessage(text, sender) {
+    const msg = document.createElement("div");
+    msg.classList.add("message", sender);
+    msg.innerHTML = text.replace(/\n/g, "<br>");
+    chatBox.appendChild(msg);
+    chatBox.scrollTop = chatBox.scrollHeight;
+  }
 
-    function sendMessage(e) {
-      e.preventDefault();
-      const text = input.value.trim();
-      if (!text) return;
+  function sendMessage(e) {
+    e.preventDefault();
+    const text = input.value.trim();
+    if (!text) return;
 
-      appendMessage(text, "user");
-      input.value = "";
+    appendMessage(text, "user");
+    input.value = "";
 
-      fetch("https://50b5-35-200-240-100.ngrok-free.app/ask", { // 🔁 Replace with your backend URL                           
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ query: text })
-      })
-      .then(res => res.json())
-      .then(data => {
-        const reply = data.response || "❌ No response received.";
-        appendMessage(reply, "bot");
-      })
-      .catch(err => {
-        console.error("Error:", err);
-        appendMessage("❌ Failed to reach the assistant.", "bot");
-      });
-    }
-  </script>
+    const selectedModel = document.getElementById("modelSelector").value;
+
+    const apiEndpoint = selectedModel === "t5"
+      ? "https://t5-ngrok-url.ngrok-free.app/ask-t5"   // 🔁 Replace with T5 endpoint
+      : "https://50b5-35-200-240-100.ngrok-free.app/ask"; // 🔁 Mistral endpoint
+
+    fetch(apiEndpoint, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ query: text })
+    })
+    .then(res => res.json())
+    .then(data => {
+      const reply = data.response || "❌ No response received.";
+      appendMessage(reply, "bot");
+    })
+    .catch(err => {
+      console.error("Error:", err);
+      appendMessage("❌ Failed to reach the assistant.", "bot");
+    });
+  }
+</script>
+
 
 </body>
 </html>
