--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     const selectedModel = document.getElementById("modelSelector").value;
 
     const apiEndpoint = selectedModel === "t5"
-      ? "https://t5-ngrok-url.ngrok-free.app/ask-t5"   // 🔁 Replace with T5 endpoint
+      ? "https://10b2-34-93-182-137.ngrok-free.app/ask-t5"   // 🔁 Replace with T5 endpoint
       : "https://50b5-35-200-240-100.ngrok-free.app/ask"; // 🔁 Mistral endpoint
 
     fetch(apiEndpoint, {
