--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       height: 100vh;
     }
 
+    /* ─── Header ─────────────────────────────────────── */
     .header {
       background: #4b0082;
       color: white;
@@ -22,71 +23,53 @@
       font-size: 22px;
     }
 
-    .chat-box {
-      flex: 1;
-      padding: 16px;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
+    /* ► SHINY TEXT EFFECT ◄ */
+    .shiny {
+      position: relative;
+      display: inline-block;   /* keeps pseudo-element sized to text */
+      overflow: hidden;        /* hide excess gradient */
+    }
+    .shiny::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        120deg,
+        transparent 0%,
+        rgba(255, 255, 255, 0.7) 50%,
+        transparent 100%
+      );
+      transform: skewX(-20deg);   /* adds a slanted highlight */
+      animation: shine 2.5s linear infinite;
+    }
+    @keyframes shine {
+      0%   { left: -100%; }
+      100% { left: 100%; }
     }
 
-    .message {
-      margin: 12px 0;
-      padding: 12px 16px;
-      border-radius: 16px;
-      max-width: 75%;
-      line-height: 1.5;
-    }
-
-    .user {
-      background: #d1e7ff;
-      align-self: flex-end;
-    }
-
-    .bot {
-      background: #ffffff;
-      align-self: flex-start;
-      border: 1px solid #ddd;
-    }
-
-    .input-container {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-      background: white;
-    }
-
-    .input-container input {
-      flex: 1;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 20px;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .input-container button {
-      margin-left: 8px;
-      padding: 12px 20px;
-      background: #4b0082;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-    }
+    /* ─── Chat layout (unchanged) ────────────────────── */
+    .chat-box { flex: 1; padding: 16px; overflow-y: auto; display: flex; flex-direction: column; }
+    .message  { margin: 12px 0; padding: 12px 16px; border-radius: 16px; max-width: 75%; line-height: 1.5; }
+    .user     { background: #d1e7ff; align-self: flex-end; }
+    .bot      { background: #ffffff; align-self: flex-start; border: 1px solid #ddd; }
+    .input-container { display: flex; padding: 10px; border-top: 1px solid #ccc; background: white; }
+    .input-container input  { flex: 1; padding: 12px; border: 1px solid #ccc; border-radius: 20px; outline: none; font-size: 16px; }
+    .input-container button { margin-left: 8px; padding: 12px 20px; background: #4b0082; color: white; border: none; border-radius: 20px; cursor: pointer; font-size: 16px; }
   </style>
 </head>
 <body>
 
-  <div class="header">💬 Welcome to Plumsoft Assistant</div>
+  <div class="header"><span class="shiny">💬 Welcome to Plumsoft Assistant</span></div>
 
   <div class="chat-box" id="chatBox"></div>
-  <!-- Add model selection -->
-<select id="modelSelector" style="margin: 10px; padding: 8px;">
-  <option value="mistral">Mistral</option>
-  <option value="t5">T5</option>
-</select>
+
+  <select id="modelSelector" style="margin: 10px; padding: 8px;">
+    <option value="mistral">Mistral</option>
+    <option value="t5">T5</option>
+  </select>
 
   <form class="input-container" onsubmit="sendMessage(event)">
     <input type="text" id="userInput" placeholder="Ask anything about Plumsoft..." autocomplete="off" />
@@ -94,48 +77,45 @@
   </form>
 
   <script>
-  const chatBox = document.getElementById("chatBox");
-  const input = document.getElementById("userInput");
+    const chatBox = document.getElementById("chatBox");
+    const input   = document.getElementById("userInput");
 
-  function appendMessage(text, sender) {
-    const msg = document.createElement("div");
-    msg.classList.add("message", sender);
-    msg.innerHTML = text.replace(/\n/g, "<br>");
-    chatBox.appendChild(msg);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  }
+    function appendMessage(text, sender) {
+      const msg = document.createElement("div");
+      msg.classList.add("message", sender);
+      msg.innerHTML = text.replace(/\n/g, "<br>");
+      chatBox.appendChild(msg);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
 
-  function sendMessage(e) {
-    e.preventDefault();
-    const text = input.value.trim();
-    if (!text) return;
+    function sendMessage(e) {
+      e.preventDefault();
+      const text = input.value.trim();
+      if (!text) return;
 
-    appendMessage(text, "user");
-    input.value = "";
+      appendMessage(text, "user");
+      input.value = "";
 
-    const selectedModel = document.getElementById("modelSelector").value;
+      const selectedModel = document.getElementById("modelSelector").value;
+      const apiEndpoint = selectedModel === "t5"
+        ? "https://8363-34-93-182-137.ngrok-free.app/ask-t5"   // 🔁 Replace with T5 endpoint
+        : "https://50b5-35-200-240-100.ngrok-free.app/ask";    // 🔁 Mistral endpoint
 
-    const apiEndpoint = selectedModel === "t5"
-      ? "https://8363-34-93-182-137.ngrok-free.app/ask-t5"   // 🔁 Replace with T5 endpoint
-      : "https://50b5-35-200-240-100.ngrok-free.app/ask"; // 🔁 Mistral endpoint
-
-    fetch(apiEndpoint, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ query: text })
-    })
-    .then(res => res.json())
-    .then(data => {
-      const reply = data.response || "❌ No response received.";
-      appendMessage(reply, "bot");
-    })
-    .catch(err => {
-      console.error("Error:", err);
-      appendMessage("❌ Failed to reach the assistant.", "bot");
-    });
-  }
-</script>
-
-
+      fetch(apiEndpoint, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ query: text })
+      })
+      .then(res => res.json())
+      .then(data => {
+        const reply = data.response || "❌ No response received.";
+        appendMessage(reply, "bot");
+      })
+      .catch(err => {
+        console.error("Error:", err);
+        appendMessage("❌ Failed to reach the assistant.", "bot");
+      });
+    }
+  </script>
 </body>
 </html>
