--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
       flex-direction: column;
     }
 
+     .spinner {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #ccc;
+  border-top: 3px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-left: 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
     .message {
       margin: 12px 0;
       padding: 12px 16px;
@@ -149,12 +165,21 @@
     }
 
     function sendMessage(e) {
-      e.preventDefault();
-      const text = input.value.trim();
-      if (!text) return;
+  e.preventDefault();
+  const text = input.value.trim();
+  if (!text) return;
 
-      appendMessage(text, "user");
-      input.value = "";
+  appendMessage(text, "user");
+  input.value = "";
+
+      // Show typing with spinner
+  const botMsg = document.createElement("div");
+  botMsg.classList.add("message", "bot");
+  botMsg.setAttribute("id", "typing");
+  botMsg.innerHTML = `Assistant is typing <span class="spinner"></span>`;
+  chatBox.appendChild(botMsg);
+  chatBox.scrollTop = chatBox.scrollHeight;
+
 
       const selectedModel = document.getElementById("modelSelector").value;
       const apiEndpoint = selectedModel === "t5"
