--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
       flex-direction: column;
     }
 
-     .spinner {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: 3px solid #ccc;
-  border-top: 3px solid #333;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-  margin-left: 10px;
-}
+    .spinner {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 3px solid #ccc;
+      border-top: 3px solid #333;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-left: 10px;
+    }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
 
     .message {
       margin: 12px 0;
@@ -137,8 +137,6 @@
 <body>
 
   <div class="header"><span class="shiny">💬 Welcome to Plumsoft Assistant</span></div>
-  
-  </div>
 
   <div class="chat-box" id="chatBox"></div>
 
@@ -165,17 +163,19 @@
     }
 
     function sendMessage(e) {
-  e.preventDefault();
-  const text = input.value.trim();
-  if (!text) return;
+      e.preventDefault();
+      const text = input.value.trim();
+      if (!text) return;
 
-  appendMessage(text, "user");
-  input.value = "";
+      appendMessage(text, "user");
+      input.value = "";
 
       const selectedModel = document.getElementById("modelSelector").value;
       const apiEndpoint = selectedModel === "t5"
         ? "https://8363-34-93-182-137.ngrok-free.app/ask-t5"
         : "https://b7cc-34-47-220-193.ngrok-free.app/ask-mistral";
+
+      const startTime = performance.now();
 
       fetch(apiEndpoint, {
         method: "POST",
@@ -184,8 +184,11 @@
       })
       .then(res => res.json())
       .then(data => {
+        const endTime = performance.now();
+        const duration = ((endTime - startTime) / 1000).toFixed(2);
+
         const reply = data.response || "❌ No response received.";
-        appendMessage(reply, "bot");
+        appendMessage(`${reply}<br><br>⏱️ <i>Response time: ${duration} seconds</i>`, "bot");
       })
       .catch(err => {
         console.error("Error:", err);
